# ganglist

./: .gitignore  AUTHORS  COPY  ChangeLog  Makefile.am  README  TODO  configure.ac  ganglist  main.py  settings.py  system.py  utils.py
config/: ganglist.conf
ganglist/: Makefile.am  config.py.in  data.py  main.py  screen.py  settings.py  system.py  utils.py
po/: POTFILES.in  ganglist.pot  ja.po
